Changes for 3.0.17rc1

New features:

Bug fixes:
...G...PS. [ZBX-13660] fixed data types passed to is_ushort() for converting PID, port and process number (Andris)
..F....... [ZBX-12935,ZBX-13539] fixed displaying of floating point values under the "Latest data" page (Sasha)
..F....... [ZBX-13500] fixed fractional values in triggers being misinterpreted without a leading 0 (agriscenko)
..F....... [ZBX-13561] fixed incorrectly displayed pie graph when first item has no data (Ivo)

--------------------------------------------------------------------------------
Changes for 3.0.16

3.0.16rc1 was released as 3.0.16 without any changes

--------------------------------------------------------------------------------
Changes for 3.0.16rc1

New features:
A.F....... [ZBX-1357] updated Chinese (China), Czech, English (United States), Japanese, Korean, Russian, Turkish, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
..F....... [ZBX-13542] fixed http steps on template not inheriting hosts application setting (nikita)
........S. [ZBX-13339] improved deallocation of memory (MVekslers)
..F....... [ZBX-13412] fixed JS error and wrong form behaviour when changing item type, type of information, data type (agriscenko)
..F....... [ZBX-13257] fixed display of the latest item in Audit log (agriscenko)
...G...PS. [ZBX-13351] improved OpenSSL error messages (viktors)
.......PS. [ZBX-13362] fixed potentially wrong rows deleting by housekeeper in PostgreSQL (Sergejs)
....I..... [ZBX-13472] fixed description of "Server" and "ServerActive" configuration options (Sasha)
........S. [ZBX-13455] added frontend error message when templates cannot be linked to LLD host (viktors)
..F....... [ZBX-13434] fixed incorrect trigger dependencies being set after copying triggers to multiple hosts; thanks to Kotaro Miyashita for the patch (Ivo)
..F....... [ZBX-13342] fixed order by query in frontend Maintenance tab (agriscenko)