@@ -3,6 +3,7 @@ Changes for 3.0.17rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-13680] fixed action not being cloned due to existing operation id being submitted (agriscenko)
 ...G...PS. [ZBX-13660] fixed data types passed to is_ushort() for converting PID, port and process number (Andris)
 ..F....... [ZBX-12935,ZBX-13539] fixed displaying of floating point values under the "Latest data" page (Sasha)
 ..F....... [ZBX-13500] fixed fractional values in triggers being misinterpreted without a leading 0 (agriscenko)
